--- a/Project 1/financial-planner.ipynb
+++ b/Project 1/financial-planner.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "2020-12-08 00:00:00-05:00  21.06  21.4599  20.17  21.3775  11073677  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,6 @@
     "\n",
     "# Get current closing prices for stocks\n",
     "ticker_data = api.get_barset(tickers, timeframe, start=current_date).df\n",
-    "# ticker_data_2 = api.get_barset(more_tickers, timeframe, start=current_date).df\n",
     "\n",
     "# Preview DataFrame\n",
     "ticker_data.head()"
@@ -472,27 +471,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2020-12-08 00:00:00-05:00    53.19\n",
+       "Name: close, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ko_close = ticker_data['KO']['close']"
+    "ko_close = ticker_data['KO']['close']\n",
+    "ko = ['KO',]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pick close prices\n",
-    "new_data = pd.concat([ticker_data['KO']['close'], ticker_data['PFE']['close'], ticker_data['O']['close'], ticker_data['GILD']['close'], ticker_data['D']['close'], ticker_data['MAIN']['close']], join='inner')\n",
-    "pfe_close = ticker_data.iloc[0, 8]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -517,31 +518,21 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>close</th>\n",
+       "      <th>close</th>\n",
+       "      <th>close</th>\n",
+       "      <th>close</th>\n",
+       "      <th>close</th>\n",
+       "      <th>close</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2020-12-08 00:00:00-05:00</th>\n",
        "      <td>53.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-08 00:00:00-05:00</th>\n",
        "      <td>42.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-08 00:00:00-05:00</th>\n",
-       "      <td>60.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-08 00:00:00-05:00</th>\n",
+       "      <td>60.4</td>\n",
        "      <td>61.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-08 00:00:00-05:00</th>\n",
        "      <td>74.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-08 00:00:00-05:00</th>\n",
        "      <td>31.67</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -549,22 +540,47 @@
        "</div>"
       ],
       "text/plain": [
-       "                           close\n",
-       "2020-12-08 00:00:00-05:00  53.19\n",
-       "2020-12-08 00:00:00-05:00  42.55\n",
-       "2020-12-08 00:00:00-05:00  60.40\n",
-       "2020-12-08 00:00:00-05:00  61.17\n",
-       "2020-12-08 00:00:00-05:00  74.74\n",
-       "2020-12-08 00:00:00-05:00  31.67"
+       "                           close  close  close  close  close  close\n",
+       "2020-12-08 00:00:00-05:00  53.19  42.55  60.4   61.17  74.74  31.67"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_data.to_frame()"
+    "# Pick close prices\n",
+    "new_data = pd.concat([ticker_data['KO']['close'], ticker_data['PFE']['close'], ticker_data['O']['close'], ticker_data['GILD']['close'], ticker_data['D']['close'], ticker_data['MAIN']['close'],\n",
+    "                     ticker_data['KO']['close'], ticker_data['KO']['close'], ticker_data['KO']['close']], \n",
+    "                    axis=1)\n",
+    "pfe_close = ticker_data.iloc[0, 8]\n",
+    "new_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Length mismatch: Expected axis has 6 elements, new values have 9 elements",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-43-673c38521360>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnew_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'KO'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'PFE'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'O'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'GILD'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'D'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'MAIN'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'UBER'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'PINS'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'WKHS'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__setattr__\u001b[1;34m(self, name, value)\u001b[0m\n\u001b[0;32m   5285\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5286\u001b[0m             \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5287\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5288\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5289\u001b[0m             \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\properties.pyx\u001b[0m in \u001b[0;36mpandas._libs.properties.AxisProperty.__set__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_set_axis\u001b[1;34m(self, axis, labels)\u001b[0m\n\u001b[0;32m    659\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    660\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_set_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 661\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    662\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_clear_item_cache\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    663\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\core\\internals\\managers.py\u001b[0m in \u001b[0;36mset_axis\u001b[1;34m(self, axis, new_labels)\u001b[0m\n\u001b[0;32m    176\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mnew_len\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mold_len\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m             raise ValueError(\n\u001b[1;32m--> 178\u001b[1;33m                 \u001b[1;34mf\"Length mismatch: Expected axis has {old_len} elements, new \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    179\u001b[0m                 \u001b[1;34mf\"values have {new_len} elements\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m             )\n",
+      "\u001b[1;31mValueError\u001b[0m: Length mismatch: Expected axis has 6 elements, new values have 9 elements"
+     ]
+    }
+   ],
+   "source": [
+    "new_data.columns = ['KO', 'PFE', 'O', 'GILD', 'D', 'MAIN', 'UBER', 'PINS', 'WKHS']"
    ]
   },
   {
