Fixed sharpe ratio for bonds incorrect formula

--- a/Project 1/financial-planner.ipynb
+++ b/Project 1/financial-planner.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -259,37 +259,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>14894.08218275</td>\n",
-       "      <td>454.28222445</td>\n",
-       "      <td>0.45900950</td>\n",
+       "      <td>14894.082183</td>\n",
+       "      <td>454.282224</td>\n",
+       "      <td>0.45901</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              BTC           ETH         XRP\n",
-       "0  14894.08218275  454.28222445  0.45900950"
+       "            BTC         ETH      XRP\n",
+       "0  14894.082183  454.282224  0.45901"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "btc_price = crypto[0]['price'].astype('float')\n",
+    "btc_price = crypto[0]['price']\n",
     "eth_price = crypto[1]['price']\n",
     "xrp_price = crypto[2]['price']\n",
     "print(btc_price, eth_price, xrp_price)\n",
-    "d = {'BTC': [btc_price], 'ETH': [eth_price], 'XRP': [xrp_price]}\n",
+    "d = {'BTC': [float(btc_price)], 'ETH': [float(eth_price)], 'XRP': [float(xrp_price)]}\n",
     "crypto_data = pd.DataFrame(data=d)\n",
     "crypto_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "2020-12-10 00:00:00-05:00  20.65  21.1485  8285186  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "2020-12-10 00:00:00-05:00  71.68  21.1485  78.38  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
        "2020-12-10 00:00:00-05:00  71.68  21.1485  78.38  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "2020-12-10 00:00:00-05:00  156.83  158.21  8366161  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
        "2020-12-10 00:00:00-05:00  112.28  72.425  158.21"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
        "2019-04-16  $2907.06"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
        "2020-12-10 00:00:00-05:00  62980.0  108760.0  143360.0  42297.0  156760.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,28 +1035,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BTC</th>\n",
+       "      <th>ETH</th>\n",
+       "      <th>XRP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.218337e+08</td>\n",
+       "      <td>206372.339451</td>\n",
+       "      <td>0.21069</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "BTC    object\n",
-       "ETH    object\n",
-       "XRP    object\n",
-       "dtype: object"
+       "            BTC            ETH      XRP\n",
+       "0  2.218337e+08  206372.339451  0.21069"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get crypto value, equal investment\n",
-    "#crypto_value = crypto_data * crypto_data\n",
-    "#crypto_value\n",
-    "crypto_data.dtypes"
+    "crypto_value = crypto_data * crypto_data\n",
+    "crypto_value"
    ]
   },
   {
