--- a/Project_1/Project_1/Project1_API_full.ipynb
+++ b/Project_1/Project_1/Project1_API_full.ipynb
@@ -5091,7 +5091,7 @@
     "    portfolio_data = all_returns,\n",
     "    weights = fund_weights,\n",
     "    num_simulation = 500, # Takes too long to run 1000\n",
-    "    num_trading_days = 252*15)\n",
+    "    num_trading_days = 252*7)\n",
     "\n",
     "# Print the simulation input data\n",
     "MC_15_returns.portfolio_data.head()"
@@ -5146,7 +5146,7 @@
    ],
    "source": [
     "# Configuring a Monte Carlo simulation to forecast 30 years cumulative returns\n",
-    "MC_15_returns.calc_cumulative_return()"
+    "MC_15_returns.calc_cumulative_return().head()"
    ]
   },
   {
